# pi

./: README.md  pi  pi.bash
template/cpp/: CMakeLists.txt
template/cpp/include/: project.hpp
template/cpp/src/: main.cpp  project.cpp
template/sfml/: CMakeLists.txt
template/sfml/include/: constants.hpp  project.hpp
template/sfml/src/: project.cpp
